Tue Oct  8 22:46:09 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* users.c (open_hook): Zero WINDOW_SIZE during initialization.

Fri Oct  4 12:30:22 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* users.c (S_tioctl_tiocswinsz): Correct test for a changed winsize.

	* ptyio.c (pty_open_hook): Reinitialize pty variables.

	* ptyio.c (pty_io_select): Return SELECT_READ if the slave isn't open.
	(pty_io_read): If the slave isn't open, return EOF.

	* users.c (set_state, open_hook): Call (*BOTTOM)->set_bits
	unconditionally.
	* devio.c (devio_set_bits): Only execute guts if CIGNORE isn't set.

	* ptyio.c (pty_io_read, pty_io_write): Honor O_NONBLOCK.

Wed Oct  2 10:49:18 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* ptyio.c (S_tioctl_tiocsig, S_tioctl_tiocucntl, S_tioctl_tiocpkt):
 	Hold GLOBAL_LOCK while frobbing (especially around send_signal).

	* ptyio.c (ptyio_set_bits): We need only be in packet mode to send
	TIOCPKT_NOSTOP & TIOCPKT_DOSTOP, regardless of the value of
	EXTERNAL_PROCESSING.

Thu Sep 26 14:24:16 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* ptyio.c: Include "tioctl_S.h".

Thu Sep 12 16:34:37 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (HURDLIBS): New variable.
	(OBJS): Don't list libraries here.

Thu Aug 29 17:26:37 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* devio.c (device_open_reply): After error from ports_create_port,
	unlock global_lock before returning.
	* users.c (trivfs_S_io_readable): Likewise before returning
	EBADF. 

Thu Aug 15 16:07:07 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* users.c (trivfs_S_io_pathconf): Implement function.

	* term.h (QUEUE_HIWAT, QUEUE_LOWAT): New macros.
	* main.c (main): Use these new macros to create inputq, rawq, and
	outputq.

Thu Aug 15 15:32:47 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* users.c (trivfs_S_file_check_access): Renamed from
	`trivfs_S_file_access'.

Mon Aug 12 11:04:28 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
