@@ -1,3 +1,8 @@
+Thu Oct 24 14:44:57 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>
+
+	* users.c (open_hook): Always assert DTR (even if O_NONBLOCK).  
+	Don't return any errors if O_NONBLOCK and we don't have carrier. 
+
 Tue Oct  8 22:46:09 1996  Miles Bader  <miles@gnu.ai.mit.edu>
 
 	* users.c (open_hook): Zero WINDOW_SIZE during initialization.
